--- a/.github/workflows/release-manual.yaml
+++ b/.github/workflows/release-manual.yaml
@@ -48,7 +48,7 @@ jobs:
           echo "::set-output name=images::${output}"
 
   images-build:
-    uses: geek-cookbook/containers/.github/workflows/action-image-build.yaml@main
+    uses: elfhosted/containers/.github/workflows/action-image-build.yaml@main
     if: needs.generate-build-matrix.outputs.matrix != '[]'
     needs:
       - generate-build-matrix
