--- a/.github/workflows/release-schedule.yaml
+++ b/.github/workflows/release-schedule.yaml
@@ -32,7 +32,7 @@ jobs:
         run: ./.github/scripts/fetch.sh
 
   images-build:
-    uses: geek-cookbook/containers/.github/workflows/action-image-build.yaml@main
+    uses: elfhosted/containers/.github/workflows/action-image-build.yaml@main
     if: needs.generate-build-matrix.outputs.matrix != '[]'
     needs:
       - generate-build-matrix
