--- a/.github/workflows/renovate-schedule.yaml
+++ b/.github/workflows/renovate-schedule.yaml
@@ -26,7 +26,7 @@ env:
   LOG_LEVEL: debug
   DRY_RUN: false
   RENOVATE_CONFIG_FILE: .github/renovate.json5
-  RENOVATE_HOST_RULES: ${{ secrets.RENOVATE_HOST_RULES }}
+  # RENOVATE_HOST_RULES: ${{ secrets.RENOVATE_HOST_RULES }}
 
 jobs:
   main:
