--- a/apps/youtubedl-material/Dockerfile
+++ b/apps/youtubedl-material/Dockerfile
@@ -2,7 +2,7 @@ ARG VERSION
 
 # Create our Ubuntu 22.04 with node 16.14.2 (that specific version is required as per: https://stackoverflow.com/a/72855258/8088021)
 # Go to 20.04
-FROM ghcr.io/geek-cookbook/ghcr.io/elfhosted/ubuntu:focal-20240427@sha256:1b84c219a764d8da5ba0f4b2b1f80e7c6396a8c9dfb499f945549396b53b0821 AS base
+FROM ghcr.io/elfhosted/ubuntu:focal-20240427@sha256:1b84c219a764d8da5ba0f4b2b1f80e7c6396a8c9dfb499f945549396b53b0821 AS base
 ARG DEBIAN_FRONTEND=noninteractive
 ENV NO_UPDATE_NOTIFIER=true
 ENV PM2_HOME=/app/pm2
