--- a/apps/kavita/Dockerfile
+++ b/apps/kavita/Dockerfile
@@ -1,7 +1,7 @@
 ARG VERSION
 
 FROM jvmilazz0/kavita:${VERSION} as upstream
-FROM ghcr.io/geek-cookbook/ghcr.io/elfhosted/ubuntu:focal-20240427@sha256:1b84c219a764d8da5ba0f4b2b1f80e7c6396a8c9dfb499f945549396b53b0821  
+FROM ghcr.io/elfhosted/ubuntu:focal-20240427@sha256:1b84c219a764d8da5ba0f4b2b1f80e7c6396a8c9dfb499f945549396b53b0821  
 
 # for initial install
 USER root
