--- a/.github/workflows/action-image-build.yaml
+++ b/.github/workflows/action-image-build.yaml
@@ -142,6 +142,7 @@ jobs:
           build-args: |-
             VERSION=${{ steps.vars.outputs.chan_upstream_version }}
             CHANNEL=${{ matrix.image.channel }}
+            ZURG_GH_CREDS=${{ secrets.ZURG_GH_CREDS }}
           context: .
           platforms: linux/amd64 # load does not support muti-arch https://github.com/docker/buildx/issues/290
           file: ${{ steps.vars.outputs.chan_dockerfile }}
@@ -172,11 +173,12 @@ jobs:
           build-args: |-
             VERSION=${{ steps.vars.outputs.chan_upstream_version }}
             CHANNEL=${{ matrix.image.channel }}
+            ZURG_GH_CREDS=${{ secrets.ZURG_GH_CREDS }}
           labels: |-
             ${{ steps.vars.outputs.chan_label_type }}.created="${{ steps.vars.outputs.chan_build_date }}"
             ${{ steps.vars.outputs.chan_label_type }}.title="${{ matrix.image.app }} (${{ matrix.image.channel }})"
             ${{ steps.vars.outputs.chan_label_type }}.version="${{ steps.vars.outputs.chan_upstream_version }}"
-            ${{ steps.vars.outputs.chan_label_type }}.authors="Devin Buhl <devin.kray@gmail.com>, Bernd Schorgers <me@bjw-s.dev>"
+            ${{ steps.vars.outputs.chan_label_type }}.authors="David Young <funkypenguin@elfhosted.com>"
             ${{ steps.vars.outputs.chan_label_type }}.url="https://github.com/elfhosted/containers/apps/${{ matrix.image.app }}"
             ${{ steps.vars.outputs.chan_label_type }}.build.url="https://github.com/elfhosted/containers/actions/runs/${{ github.run_id }}"
             ${{ steps.vars.outputs.chan_label_type }}.documentation="https://github.com/elfhosted/containers/apps/${{ matrix.image.app }}/README.md"
