--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -13,6 +13,7 @@
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prIgnoreNotification"],
   "commitBodyTable": true,
+  "excludePackagePatterns": ["alpine", "ubuntu"],
   "packageRules": [
     {
       "description": "Auto-merge Github Actions",
