--- a/apps/youtubedl-material/Dockerfile
+++ b/apps/youtubedl-material/Dockerfile
@@ -1,24 +1,74 @@
-ARG VERSION
+# Fetching our utils
+FROM ghcr.io/elfhosted/ubuntu:focal-20240427@sha256:1b84c219a764d8da5ba0f4b2b1f80e7c6396a8c9dfb499f945549396b53b0821 AS utils
+ENV DEBIAN_FRONTEND=noninteractive
+# Use script due local build compability
+COPY docker-utils/*.sh .
+RUN chmod +x *.sh
+RUN sh ./ffmpeg-fetch.sh
+RUN sh ./fetch-twitchdownloader.sh
+
 
 # Create our Ubuntu 22.04 with node 16.14.2 (that specific version is required as per: https://stackoverflow.com/a/72855258/8088021)
 # Go to 20.04
 FROM ghcr.io/elfhosted/ubuntu:focal-20240427@sha256:1b84c219a764d8da5ba0f4b2b1f80e7c6396a8c9dfb499f945549396b53b0821 AS base
+ARG TARGETPLATFORM
 ARG DEBIAN_FRONTEND=noninteractive
+ENV UID=1000
+ENV GID=1000
+ENV USER=youtube
 ENV NO_UPDATE_NOTIFIER=true
 ENV PM2_HOME=/app/pm2
 ENV ALLOW_CONFIG_MUTATIONS=true
-ENV UID=568
-ENV GID=568
-RUN apt update && \
-    curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && \
-    apt install -y --no-install-recommends nodejs && \
-    npm -g install npm n && \
-    n 16.14.2 && \
+ENV npm_config_cache=/app/.npm
+
+# Use NVM to get specific node version
+ENV NODE_VERSION=16.14.2
+RUN groupadd -g $GID $USER && useradd --system -m -g $USER --uid $UID $USER && \
+    apt update && \
+    apt install -y --no-install-recommends curl ca-certificates tzdata libicu70 libatomic1 && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Use the official image to pull the app code from
-FROM tzahi12345/youtubedl-material:${VERSION} as upstream
+RUN mkdir /usr/local/nvm
+ENV PATH="/usr/local/nvm/versions/node/v${NODE_VERSION}/bin/:${PATH}"
+ENV NVM_DIR=/usr/local/nvm
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
+RUN . "$NVM_DIR/nvm.sh" && nvm install ${NODE_VERSION}
+RUN . "$NVM_DIR/nvm.sh" && nvm use v${NODE_VERSION}
+RUN . "$NVM_DIR/nvm.sh" && nvm alias default v${NODE_VERSION}
+
+# Build frontend
+ARG BUILDPLATFORM
+FROM --platform=${BUILDPLATFORM} node:16 as frontend
+RUN npm install -g @angular/cli
+WORKDIR /build
+COPY [ "package.json", "package-lock.json", "angular.json", "tsconfig.json", "/build/" ]
+COPY [ "src/", "/build/src/" ]
+RUN npm install && \
+    npm run build && \
+    ls -al /build/backend/public
+RUN npm uninstall -g @angular/cli
+RUN rm -rf node_modules
+
+
+# Install backend deps
+FROM base as backend
+WORKDIR /app
+COPY [ "backend/","/app/" ]
+RUN npm config set strict-ssl false && \
+    npm install --prod && \
+    ls -al
+
+#FROM base as python
+# armv7 need build from source
+#WORKDIR /app
+#COPY docker-utils/GetTwitchDownloader.py .
+#RUN apt update && \
+#    apt install -y --no-install-recommends python3-minimal python-is-python3 python3-pip python3-dev build-essential libffi-dev && \
+#    apt clean && \
+#    rm -rf /var/lib/apt/lists/*
+#RUN pip install PyGithub requests
+#RUN python GetTwitchDownloader.py
 
 # Final image
 FROM base
@@ -30,17 +80,18 @@ RUN npm install -g pm2 && \
     apt autoremove -y --purge && \
     apt clean && \
     rm -rf /var/lib/apt/lists/*
-# RUN pip install tcd
 WORKDIR /app
 # User 1000 already exist from base image
-COPY --chown=$UID:$GID --from=upstream [ "/usr/local/bin/ffmpeg", "/usr/local/bin/ffmpeg" ]
-COPY --chown=$UID:$GID --from=upstream [ "/usr/local/bin/ffprobe", "/usr/local/bin/ffprobe" ]
-COPY --chown=$UID:$GID --from=upstream ["/app/","/app/"]
-COPY --chown=$UID:$GID --from=upstream [ "/usr/local/bin/TwitchDownloaderCLI", "/usr/local/bin/TwitchDownloaderCLI"]
+COPY --chown=$UID:$GID --from=utils [ "/usr/local/bin/ffmpeg", "/usr/local/bin/ffmpeg" ]
+COPY --chown=$UID:$GID --from=utils [ "/usr/local/bin/ffprobe", "/usr/local/bin/ffprobe" ]
+COPY --chown=$UID:$GID --from=utils [ "/usr/local/bin/TwitchDownloaderCLI", "/usr/local/bin/TwitchDownloaderCLI"]
+COPY --chown=$UID:$GID --from=backend ["/app/","/app/"]
+COPY --chown=$UID:$GID --from=frontend [ "/build/backend/public/", "/app/public/" ]
+#COPY --chown=$UID:$GID --from=python ["/app/TwitchDownloaderCLI","/usr/local/bin/TwitchDownloaderCLI"]
 RUN chmod +x /app/fix-scripts/*.sh
 # Add some persistence data
 #VOLUME ["/app/appdata"]
 
 EXPOSE 17442
-# ENTRYPOINT [ "/app/entrypoint.sh" ]
+ENTRYPOINT [ "/app/entrypoint.sh" ]
 CMD [ "npm","start" ]
