bulk search/replace - what could go wrong? :)
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/dante/Dockerfile
+++ b/apps/dante/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION=1.4.3
-FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
 
 ENV workers 1
 
