--- a/apps/nzbget/Dockerfile
+++ b/apps/nzbget/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/geek-cookbook/alpine:3.19.1@sha256:9c7e1a891b92b261c034a8d9b77b19dd007cc5398ab958282fd9a152fc4c9b46
+FROM ghcr.io/elfhosted/alpine:3.19.1@sha256:9c7e1a891b92b261c034a8d9b77b19dd007cc5398ab958282fd9a152fc4c9b46
 
 ARG TARGETPLATFORM
 ARG BUILDPLATFORM
