--- a/apps/autobrr/Dockerfile
+++ b/apps/autobrr/Dockerfile
@@ -1,7 +1,7 @@
 ARG VERSION
 FROM ghcr.io/autobrr/autobrr:v${VERSION} as upstream
 
-FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
 
 LABEL org.opencontainers.image.source = "https://github.com/autobrr/autobrr"
 
