--- a/apps/gatus/Dockerfile
+++ b/apps/gatus/Dockerfile
@@ -1,7 +1,7 @@
 ARG VERSION
 FROM twinproduction/gatus:v${VERSION} as upstream
 
-FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
 
 COPY --from=upstream /gatus /
 COPY --from=upstream /config/config.yaml ./config/config.yaml
