--- a/apps/homer/Dockerfile
+++ b/apps/homer/Dockerfile
@@ -25,7 +25,7 @@ RUN pnpm install --frozen-lockfile
 COPY --from=cloner /source/. .
 RUN pnpm build
 
-FROM ghcr.io/geek-cookbook/alpine:3.19.1@sha256:9c7e1a891b92b261c034a8d9b77b19dd007cc5398ab958282fd9a152fc4c9b46
+FROM ghcr.io/elfhosted/alpine:3.19.1@sha256:9c7e1a891b92b261c034a8d9b77b19dd007cc5398ab958282fd9a152fc4c9b46
 
 ENV GID 568
 ENV UID 568
