--- a/apps/rclone/Dockerfile
+++ b/apps/rclone/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION
-FROM ghcr.io/geek-cookbook/alpine:edge@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a
+FROM ghcr.io/elfhosted/alpine:edge@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a
 
 ENV TZ="UTC" \
   PUID="568" \
