--- a/apps/traefik-forward-auth/Dockerfile
+++ b/apps/traefik-forward-auth/Dockerfile
@@ -1,6 +1,6 @@
 ARG VERSION
 FROM mesosphere/traefik-forward-auth:${VERSION} as upstream
-FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
 COPY --from=upstream /traefik-forward-auth /traefik-forward-auth
 EXPOSE 4181
 ENTRYPOINT ["/traefik-forward-auth"]
