--- a/apps/xteve/Dockerfile
+++ b/apps/xteve/Dockerfile
@@ -1,6 +1,6 @@
 # From https://github.com/dnsforge-repo/xteve/tree/master/bin
 
-FROM ghcr.io/geek-cookbook/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
 
 RUN apk update
 RUN apk upgrade
