--- a/apps/zurg/Dockerfile
+++ b/apps/zurg/Dockerfile
@@ -1,6 +1,6 @@
 ARG VERSION
 FROM ghcr.io/debridmediamanager/zurg-testing:${VERSION} as upstream
-FROM ghcr.io/geek-cookbook/alpine:3.19.1@sha256:9c7e1a891b92b261c034a8d9b77b19dd007cc5398ab958282fd9a152fc4c9b46 
+FROM ghcr.io/elfhosted/alpine:3.19.1@sha256:9c7e1a891b92b261c034a8d9b77b19dd007cc5398ab958282fd9a152fc4c9b46 
 
 WORKDIR /config
 
