--- a/apps/jackett/Dockerfile
+++ b/apps/jackett/Dockerfile
@@ -1,6 +1,6 @@
 ARG VERSION
 
-FROM ghcr.io/elfhosted/alpine:rolling@sha256:f5e27001ebd22ad35f1a30d7d7e127b61273ae9c64666aee8ad37c522b7bae1a 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f 
 
 # environment settings
 ENV XDG_DATA_HOME="/config" \
