--- a/apps/rclone/Dockerfile
+++ b/apps/rclone/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION
-FROM ghcr.io/elfhosted/alpine:edge@sha256:sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f
+FROM ghcr.io/elfhosted/alpine:edge@sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f
 
 ENV TZ="UTC" \
   PUID="568" \
