--- a/apps/dante/Dockerfile
+++ b/apps/dante/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION=1.4.3
-FROM ghcr.io/elfhosted/alpine:rolling@sha256:sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f 
 
 ENV workers 1
 
