--- a/apps/qbittorrent/Dockerfile
+++ b/apps/qbittorrent/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/elfhosted/alpine:edge@sha256:sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f
+FROM ghcr.io/elfhosted/alpine:edge@sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f
 
 # environment settings
 ARG UNRAR_VERSION=6.2.8
