--- a/apps/xteve/Dockerfile
+++ b/apps/xteve/Dockerfile
@@ -1,6 +1,6 @@
 # From https://github.com/dnsforge-repo/xteve/tree/master/bin
 
-FROM ghcr.io/elfhosted/alpine:rolling@sha256:sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f 
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:3d8693e2e68a277e14e96594381f8b8620c81ada3827babb842faeaae607693f 
 
 RUN apk update
 RUN apk upgrade
