--- a/apps/iceberg/Dockerfile
+++ b/apps/iceberg/Dockerfile
@@ -31,7 +31,7 @@ ENV POETRY_NO_INTERACTION=1 \
 
 WORKDIR /app
 
-COPY --from=cloner /source/pyproject.toml poetry.lock ./
+COPY --from=cloner /source/pyproject.toml /source/poetry.lock ./
 RUN touch README.md
 RUN poetry install --without dev --no-root && rm -rf $POETRY_CACHE_DIR
 
