--- a/apps/readarr/ci/goss.yaml
+++ b/apps/readarr/ci/goss.yaml
@@ -11,7 +11,7 @@ port:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:8787:
-    status: 200
-    timeout: 5000
+# http:
+#   http://localhost:8787:
+#     status: 200
+#     timeout: 5000
