tidy up riven background
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/riven/restricted.tmux.conf
+++ b/apps/riven/restricted.tmux.conf
@@ -17,3 +17,6 @@ set -g default-terminal "tmux"
 # Disable special characters on scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
+# resize as requested
+set -g window-size latest
+setw -g aggressive-resize on
