live on the edge, baby!
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/codeserver/Dockerfile
+++ b/apps/codeserver/Dockerfile
@@ -4,6 +4,7 @@ FROM ghcr.io/coder/code-server:${VERSION}
 # Install python deps
 USER 0
 
+ENV PIP_BREAK_SYSTEM_PACKAGES=1
 RUN apt-get -y update && \
     apt-get -y upgrade && \
     apt-get -y install \
