--- a/apps/codeserver/ci/goss.yaml
+++ b/apps/codeserver/ci/goss.yaml
@@ -1,8 +1,8 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  code-server:
-    running: true
+# process:
+#   code-server:
+#     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
