--- a/apps/flaresolverr/Dockerfile
+++ b/apps/flaresolverr/Dockerfile
@@ -1,6 +1,6 @@
 ARG VERSION
 FROM ghcr.io/flaresolverr/flaresolverr:v${VERSION} as upstream
 COPY ./apps/alpine/scripts /scripts
-COPY ./apps/flaresolverr/entrypoint.sh /
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+CMD ["bash", "-c", "source /scripts/vpn.sh && exec /usr/local/bin/python -u /app/flaresolverr.py"]
