--- a/apps/kometa/Dockerfile
+++ b/apps/kometa/Dockerfile
@@ -21,6 +21,12 @@ RUN echo "**** install system packages ****" \
  && wget -O /tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-"$(dpkg --print-architecture | awk -F- '{ print $NF }')" \
  && chmod +x /tini \
  && pip3 install --no-cache-dir --upgrade --requirement /requirements.txt \
+ && apt-get install -y build-essential cmake git libjson-c-dev libwebsockets-dev \
+ && git clone https://github.com/tsl0922/ttyd.git \
+ && cd ttyd && mkdir build && cd build \
+ &&  cmake .. \
+ && make \
+ && sudo make install \
  && apt-get --purge autoremove gcc g++ libxml2-dev libxslt-dev libz-dev -y \
  && apt-get clean \
  && apt-get update \
