--- a/apps/stremify/Dockerfile
+++ b/apps/stremify/Dockerfile
@@ -3,6 +3,8 @@ FROM alpine:latest as cloner
 ARG CHANNEL
 ARG VERSION
 
+
+
 RUN apk update && apk upgrade && \
     apk add --no-cache git patch
 
@@ -14,7 +16,12 @@ COPY apps/stremify/branding/elfhosted-branding.patch /source/
 RUN cd /source && \
     git apply elfhosted-branding.patch
 
-FROM node:20-slim
+FROM node:20-alpine3.19 as build-stage
+
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
+RUN corepack use pnpm@8
 
 RUN mkdir -p /home/node/app && chown -R node:node /home/node/app \
   && mkdir -p /data && chown -R node:node /data
@@ -23,9 +30,10 @@ WORKDIR /home/node/app
 
 COPY --chown=node:node --from=cloner source/package*.json ./
 
+RUN apk add git
 USER node
 
-RUN npm install
+RUN pnpm install
 
 
 
