--- a/apps/cyberflix-server/Dockerfile
+++ b/apps/cyberflix-server/Dockerfile
@@ -12,9 +12,12 @@ FROM python:3.11
 
 WORKDIR /app
 
+USER nobody 
+
 COPY --from=cloner /source/requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt && \
+    mv /app/db /app/db-orig
 
 COPY --from=cloner /source .
 
