--- a/apps/plex-debrid/Dockerfile
+++ b/apps/plex-debrid/Dockerfile
@@ -6,36 +6,29 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone --depth 1 https://github.com/butlerx/wetty.git /source
-
 # Get plex_debrid source
-RUN git clone --depth 1 https://github.com/itsToggle/plex_debrid /plex_debrid
+RUN git clone --depth 1 https://github.com/itsToggle/plex_debrid /source
 
 
 FROM python:3.11-alpine
 
-# LABEL maintainer="butlerx@notthe.cloud"
-# WORKDIR /usr/src/app
-# ENV NODE_ENV=production
-# EXPOSE 3000
-
-# ENV PNPM_HOME="/pnpm"
-# ENV PATH="$PNPM_HOME:$PATH"
-# RUN corepack enable
-# RUN npx pnpm i -g pnpm@v8
-
-
 # COPY --from=prod-deps /usr/src/app/node_modules /usr/src/app/node_modules
 # COPY --from=build /usr/src/app/build /usr/src/app/build
-COPY --from=cloner /plex_debrid /usr/src/app/plex_debrid
-COPY --from=cloner /source/package.json /usr/src/app
+COPY --from=cloner /source /usr/src/app/
 # RUN apk add -U coreutils
 
-RUN apk add --update --no-cache py3-pip tmux ttdy && \
-    python3 -m venv plex_debrid/.venv && \
-    . plex_debrid/.venv/bin/activate && \
-    pip3 install --break-system-packages --no-cache --upgrade pip setuptools && \
-    pip3 install -r ./plex_debrid/requirements.txt
+WORKDIR /usr/src/app
+RUN apk add --update --no-cache py3-pip tmux ttyd  && \
+    mkdir /.local && \
+    chown 568 /.local
+
+# && \
+#     python3 -m venv plex_debrid/.venv && \
+#     . plex_debrid/.venv/bin/activate && \
+
+USER 568
+RUN pip3 install --break-system-packages --no-cache --upgrade pip setuptools && \
+    pip3 install -r ./requirements.txt
 
 COPY apps/plex-debrid/plex-debrid.sh /
 COPY apps/plex-debrid/launch-tmux.sh /
@@ -45,6 +38,7 @@ COPY apps/plex-debrid/restricted.tmux.conf /usr/src/app
 # Apply the trakt fix
 COPY apps/plex-debrid/trakt.py /usr/src/app/plex_debrid/content/services/
 
+WORKDIR /config
 ENTRYPOINT [ "/entrypoint.sh" ]
 
 
