--- a/apps/homer/Dockerfile
+++ b/apps/homer/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://github.com/bastienwirtz/homer.git /source
+RUN git clone -b $VERSION  https://github.com/bastienwirtz/homer.git /source
 
 # build stage
 FROM node:18-alpine3.19 as build-stage
