--- a/apps/shluflix/Dockerfile
+++ b/apps/shluflix/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone --depth 1 https://bitbucket.org/shluflix-stremio/shluflix.git /source
+RUN git clone  https://bitbucket.org/shluflix-stremio/shluflix.git /source
 
 FROM ghcr.io/elfhosted/alpine-node:20@sha256:34e579ce8fd045ec28105d0ee720e6d4b8fd332ebeb8d4890784b8b991d51e29
 WORKDIR /app
