--- a/apps/zurg/rc/Dockerfile
+++ b/apps/zurg/rc/Dockerfile
@@ -8,7 +8,7 @@ ARG ZURG_GH_CREDS
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://$ZURG_GH_CREDS@github.com/debridmediamanager/zurg.git /source
+RUN git clone -b $VERSION  https://$ZURG_GH_CREDS@github.com/debridmediamanager/zurg.git /source
 
 FROM golang:1-alpine AS builder
 ARG BuiltAt
