--- a/apps/davio/Dockerfile
+++ b/apps/davio/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://github.com/arvida42/davio /source
+RUN git clone -b $VERSION  https://github.com/arvida42/davio /source
 
 FROM node:20-slim
 
