--- a/apps/flaresolverr/Dockerfile copy
+++ b/apps/flaresolverr/Dockerfile copy
@@ -7,7 +7,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone --depth 1 https://github.com/21hsmw/FlareSolverr.git /source
+RUN git clone  https://github.com/21hsmw/FlareSolverr.git /source
 
 FROM python:3.11-slim-bullseye as builder
 
