--- a/apps/knightcrawler/migrator/Dockerfile
+++ b/apps/knightcrawler/migrator/Dockerfile
@@ -5,7 +5,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://github.com/knightcrawler-stremio/knightcrawler.git /source
+RUN git clone -b $VERSION  https://github.com/knightcrawler-stremio/knightcrawler.git /source
 
 FROM ghcr.io/peterldowns/pgmigrate:latest
 USER root
