--- a/apps/kometa/Dockerfile
+++ b/apps/kometa/Dockerfile
@@ -5,7 +5,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://github.com/Kometa-Team/Kometa.git /source
+RUN git clone -b $VERSION  https://github.com/Kometa-Team/Kometa.git /source
 
 # syntax=docker/dockerfile:1
 
