--- a/apps/plextraktsync/Dockerfile
+++ b/apps/plextraktsync/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://github.com/Taxel/PlexTraktSync /source
+RUN git clone -b $VERSION  https://github.com/Taxel/PlexTraktSync /source
 
 # syntax = docker/dockerfile:1.3-labs
 ARG PYTHON_VERSION=3.12
