--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -26,7 +26,8 @@ ENV POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_CREATE=1 \
     POETRY_CACHE_DIR=/tmp/poetry_cache \
     HOST=0.0.0.0 \
-    FASTAPI_WORKERS=1
+    FASTAPI_WORKERS=1 \
+    INDEXER_MANAGER_INDEXERS=FAKE_TO_PASS_TESTING
 
 # Set working directory
 WORKDIR /app
